[package]
name = "baby-crawler-network"
version = "0.1.0"
edition = "2024"

[package.metadata.turbo]
user = "cb23e7dd-8640-4094-aa44-0739b9c0a309"

[dependencies]
turbo = { version = "4.0.0", package = "turbo-genesis-sdk" }
borsh = "1.3"
serde = { version = "1.0", features = ["derive"] }
bitflags = "1.3"

[lib]
crate-type = ["cdylib"]

[lints.rust]
unexpected_cfgs = { level = "allow" }
