[package]
name = "baby-crawler-network"
version = "0.1.0"
edition = "2024"

[package.metadata.turbo]
user = "5ffdc1e5-250f-4d3c-b3f4-6a07345e5da8"

[dependencies]
turbo = { version = "4.0.0", package = "turbo-genesis-sdk" }
borsh = "1.3"
serde = { version = "1.0", features = ["derive"] }
bitflags = "1.3"

[lib]
crate-type = ["cdylib"]

[lints.rust]
unexpected_cfgs = { level = "allow" }
